syntax = "proto3";
package com.antigravity;

import "client/race_model.proto";
import "client/driver_model.proto";
import "server/heat.proto";

option java_package = "com.antigravity.proto";
option java_multiple_files = true;
option java_outer_classname = "FullUpdateProto";

message FullUpdate {
  RaceModel race = 1;
  repeated DriverModel drivers = 2;
  repeated Heat heats = 3;
  Heat current_heat = 4;
}
